# inf_netsim

./: CMakeLists.txt  README.md  main.cpp
include/: factory.hpp  helpers.hpp  nodes.hpp  package.hpp  reports.hpp  simulation.hpp  storage_types.hpp  types.hpp
src/: factory.cpp  nodes.cpp  package.cpp  reports.cpp  simulation.cpp  storage_types.cpp
test/: config.hpp  global_functions_mock.hpp  main_gtest.cpp  nodes_mocks.hpp  package_tests.cpp  test_Factory.cpp  test_factory_io.cpp  test_nodes.cpp  test_package.cpp  test_reports.cpp  test_simulate.cpp  test_storage_types.cpp
